--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
         <button id="restart-button">Restart</button>
     </div>
 
-    <script src="js/constants.js"></script>
-    <script src="js/rendering.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/input.js"></script>
+    <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
